--- a/poo09/kuarup/tribos/guajajaras/Tribo-Guajajaras.htm
+++ b/poo09/kuarup/tribos/guajajaras/Tribo-Guajajaras.htm
@@ -2,17 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" href="http://vs1.pbwiki.com/layout/common/css/packed-m-v00801033.css" type="text/css" media="screen,projection"  /> 
-<script type="text/javascript" src="http://vs1.pbwiki.com/layout/js/packed-v56035704.js"  ></script>
+<link rel="stylesheet" href="http://vs1.pbwiki.com/layout/common/css/packed-m-v79039897.css" type="text/css" media="screen,projection"  /> 
+<script type="text/javascript" src="http://vs1.pbwiki.com/layout/js/packed-v77358136.js"  ></script>
 <link rel="stylesheet" href="http://vs1.pbwiki.com/layout/common/css/print-v22134977.css" media="print" type="text/css"  />
 <!--[if lte IE 6]>
 <style>h1 {margin-top:14px;} .cnr,.ct {display:none}</style>
 <script type="text/javascript">function ie6minwidth(){var size = (document.documentElement.clientWidth<960 ? '960px' : '100%'); $(document.body).setStyle({'width':size});} document.observe("dom:loaded", ie6minwidth); Event.observe(window, 'resize', ie6minwidth); </script>
 <![endif]-->
 <!--[if lte IE 6]><link rel="stylesheet" type="text/css" href="/layout/common/css/ie6.css" /><![endif]-->
-<script>PBwiki.init(function(){ UserPrefs.initialize({"modules":{"module:folders":0},"hide":false}); });</script>
 <script>
-PBinfo = {"CurrentPage":{"sessCookie":"ws","page":"Tribo Guajajaras","editorVersion":"1238535940","isDev":false,"starred":false,"saved":false,"folder":"Guajajaras","hasPlugins":false},"CurrentWiki":{"isPublic":true,"debug":null,"usercount":"21","filecount":203,"pagecount":100,"starredcount":0,"name":"kuarup2009","granular_notifications":false},"GetTimes":{"_auth_role":"mod","_auth_via":"cookie","_not_checking_inputs":true,"_valid_as_of":1238855260,"commenttime":0,"filetime":1238808125,"foldertime":1238808126,"pagetime":1238851829,"permtime":1236763378,"tagtime":1236248066,"_args":{"ws":"CW3kLkyNrQ16OWCHZGxn","op":"GetTimes"}},"CheckPermissions":{"pageperm":"write","uid":"8e97098a0aa6e38e2a068474c4f3d8a1187b0d01","wikiperm":"mod"},"GetFeatures":{"ajaxedit":true,"ajaxlink":true,"ajaxsave":true,"autocomplete_v2":true,"sidebar_v3":true,"stars":true,"pbspell":true},"GetUserPrefs":{"sidebar":{"folders":[],"sidebar":[],"addusers":[],"recentactivity":[]},"starred":[],"prompt_to_star_on_save":"true","prompt_to_send_a_link":false},"GetPageLock":{"_auth_role":"mod","_auth_via":"cookie","_not_checking_inputs":true,"_perm_cache_times":{"pagetime":1238851829},"_valid_as_of":1238855260,"lockinfo":false,"pagetime":1237984841,"_args":{"page":"Tribo Guajajaras","ws":"CW3kLkyNrQ16OWCHZGxn","op":"GetPageLock"}},"GetFolders":{"_auth_role":"mod","_auth_via":"cookie","_not_checking_inputs":true,"_optimized_paging":true,"_perm_cache_times":{"foldertime":1238808126},"_valid_as_of":1238855260,"folders":[{"name":"Caet\u00e9","has_custom_perms":false,"published":false,"count":14,"pagecount":1,"filecount":13,"perms":{"r":true,"w":true,"d":true}},{"name":"Guajajaras","has_custom_perms":false,"published":false,"count":15,"pagecount":5,"filecount":10,"perms":{"r":true,"w":true,"d":true}},{"name":"Guarani","has_custom_perms":false,"published":false,"count":24,"pagecount":5,"filecount":19,"perms":{"r":true,"w":true,"d":true}},{"name":"juruna","has_custom_perms":false,"published":false,"count":12,"pagecount":0,"filecount":12,"perms":{"r":true,"w":true,"d":true}},{"name":"karaj\u00e1","has_custom_perms":false,"published":false,"count":13,"pagecount":4,"filecount":9,"perms":{"r":true,"w":true,"d":true}},{"name":"Piraporangatu","has_custom_perms":false,"published":false,"count":10,"pagecount":7,"filecount":3,"perms":{"r":true,"w":true,"d":true}},{"name":"Potiguara","has_custom_perms":false,"published":false,"count":5,"pagecount":5,"filecount":0,"perms":{"r":true,"w":true,"d":true}},{"name":"Tabajara","has_custom_perms":false,"published":false,"count":20,"pagecount":6,"filecount":14,"perms":{"r":true,"w":true,"d":true}},{"name":"Temimin\u00f3s","has_custom_perms":false,"published":false,"count":13,"pagecount":5,"filecount":8,"perms":{"r":true,"w":true,"d":true}},{"name":"Ticuna","has_custom_perms":false,"published":false,"count":9,"pagecount":2,"filecount":7,"perms":{"r":true,"w":true,"d":true}},{"name":"Tupinamb\u00e1","has_custom_perms":false,"published":false,"count":17,"pagecount":5,"filecount":12,"perms":{"r":true,"w":true,"d":true}},{"name":"Tupiniquim","has_custom_perms":false,"published":false,"count":5,"pagecount":5,"filecount":0,"perms":{"r":true,"w":true,"d":true}},{"name":"Txucarramae","has_custom_perms":false,"published":false,"count":3,"pagecount":2,"filecount":1,"perms":{"r":true,"w":true,"d":true}},{"name":"WaiWai","has_custom_perms":false,"published":false,"count":11,"pagecount":2,"filecount":9,"perms":{"r":true,"w":true,"d":true}},{"name":"Xavante","has_custom_perms":false,"published":false,"count":19,"pagecount":5,"filecount":14,"perms":{"r":true,"w":true,"d":true}},{"name":"Xerente","has_custom_perms":false,"published":false,"count":11,"pagecount":0,"filecount":11,"perms":{"r":true,"w":true,"d":true}},{"name":"Yanomami","has_custom_perms":false,"published":false,"count":16,"pagecount":5,"filecount":11,"perms":{"r":true,"w":true,"d":true}}],"unfiled_count":87,"unfiled_filecount":51,"unfiled_pagecount":36,"_args":{"verbose":true,"foldertime":1238808126,"ws":"CW3kLkyNrQ16OWCHZGxn","op":"GetFolders"}},"GetCurrentPages":{"_anchor":4,"_auth_role":"mod","_auth_via":"cookie","_block":0,"_count":50,"_not_checking_inputs":true,"_offset":0,"_optimized_paging":true,"_perm_cache_times":{"pagetime":1238851829,"foldertime":1238808126,"permtime":1236763378},"_total_count":5,"_valid_as_of":1238855260,"pages":[{"name":"Coadjuvantes-Guajajaras","mtime":"1237178801","folder":"Guajajaras"},{"name":"MovimentoGuajajaras","mtime":"1237949700","folder":"Guajajaras"},{"name":"Personagens Peixes Guajajaras","mtime":"1237130904","folder":"Guajajaras"},{"name":"Primeiro Problema - Guajajaras","mtime":"1238728038","folder":"Guajajaras"},{"name":"Tribo Guajajaras","mtime":"1237984841","folder":"Guajajaras"}],"_args":{"verbose":true,"detail":"partial","folder":"Guajajaras","sortby":"name","anchor":"Tribo Guajajaras","count":50,"pagetime":1238851829,"foldertime":1238808126,"permtime":1236763378,"ws":"CW3kLkyNrQ16OWCHZGxn","op":"GetPages"}},"GetChanges":{"_auth_role":"mod","_auth_via":"cookie","_not_checking_inputs":true,"_perm_cache_times":{"pagetime":1238851829,"filetime":1238808125,"permtime":1236763378,"foldertime":1238808126},"_valid_as_of":1238855260,"changes":[{"op_word":"edited","user_id":"791e88ae648f1f008912e0cee631803fda2c1627","user_email":"thiagoein@yahoo.com.br","user_name":"thiagoein@yahoo.com.br","time":1238851829,"page":"Tutorial Dos Jogos","type":"page"},{"op_word":"edited","user_id":"791e88ae648f1f008912e0cee631803fda2c1627","user_email":"thiagoein@yahoo.com.br","user_name":"thiagoein@yahoo.com.br","time":1238817070,"page":"Tutorial Dos Jogos","type":"page"},{"op_word":"uploaded","user_id":"c69c4d600b0002ebbf17fc5af8b106eec90aa551","user_email":"hfrj@terra.com.br","user_name":"Humberto","time":1238808125,"file":"Carpa-comun Game.py","type":"file"},{"op_word":"uploaded","user_id":"c69c4d600b0002ebbf17fc5af8b106eec90aa551","user_email":"hfrj@terra.com.br","user_name":"Humberto","time":1238808097,"file":"Carpa-Comum Game2.gif","type":"file"},{"op_word":"added","user_id":"ea3b250ec221e78dacba63a8559c8b45f0e6254e","user_email":"cetoli@yahoo.com.br","user_name":"Carlo","time":1238800270,"page":"Vote Nos Primeiros Problemas","type":"page"},{"op_word":"edited","user_id":"ea3b250ec221e78dacba63a8559c8b45f0e6254e","user_email":"cetoli@yahoo.com.br","user_name":"Carlo","time":1238800230,"page":"FrontPage","type":"page"},{"op_word":"edited","user_id":"ea3b250ec221e78dacba63a8559c8b45f0e6254e","user_email":"cetoli@yahoo.com.br","user_name":"Carlo","time":"1238800086","page":"FrontPage","type":"page"}],"_args":{"count":7,"pagetime":1238851829,"filetime":1238808125,"permtime":1236763378,"foldertime":1238808126,"ws":"CW3kLkyNrQ16OWCHZGxn","op":"GetChanges"}},"GetPage":{"_perm_cache_times":{"pagetime":1238851829,"foldertime":1238808126,"permtime":1236763378},"_valid_as_of":1238855260,"author":{"uid":"8e97098a0aa6e38e2a068474c4f3d8a1187b0d01","name":"Andre Sion","email":"andre.sion@gmail.com"},"folder":"Guajajaras","hasPlugins":false,"has_custom_perms":false,"hidden":false,"locked":false,"mtime":1237984841,"name":"Tribo Guajajaras","perms":{"r":true,"w":true,"d":true},"revcount":19,"revurl":"Tribo Guajajaras.2009-03-25-12-40-41","wikistyle":false,"_args":{"page":"Tribo Guajajaras","revision":false,"ws":"CW3kLkyNrQ16OWCHZGxn","op":"GetPage"}}};
+PBinfo = {"CurrentPage":{"isDev":false,"sessCookie":"ws","folder":"Guajajaras","saved":false,"starred":false,"page":"Tribo Guajajaras","editorVersion":"1238535940"},"CurrentWiki":{"isPublic":true,"debug":null,"usercount":"21","filecount":241,"pagecount":115,"name":"kuarup2009","starredcount":0,"granular_notifications":false},"CheckPermissions":{"uid":"8e97098a0aa6e38e2a068474c4f3d8a1187b0d01","wikiperm":"mod"},"GetFeatures":{"ajaxedit":true,"ajaxlink":true,"ajaxsave":true,"autocomplete_v2":true,"stars":true,"pbspell":true},"GetUserPrefs":{"sidebar":{"folders":[],"sidebar":[],"addusers":[],"recentactivity":[]},"sidebar_collapsed":false,"starred":[],"prompt_to_star_on_save":"true","prompt_to_send_a_link":false},"GetTimes":{"_auth_role":"mod","_auth_via":"cookie","_not_checking_inputs":true,"_valid_as_of":1240028099,"commenttime":0,"filetime":1240028076,"foldertime":1240028077,"pagetime":1240027895,"permtime":1236763378,"tagtime":1236248066,"_args":{"ws":"bbnwH1S4mnOsUJqAVnvH","op":"GetTimes"}},"GetPage":{"_perm_cache_times":{"pagetime":1240027895,"foldertime":1240028077,"permtime":1236763378},"_valid_as_of":1240028099,"author":{"uid":"8e97098a0aa6e38e2a068474c4f3d8a1187b0d01","name":"Andre Sion","email":"andre.sion@gmail.com"},"folder":"Guajajaras","hasPlugins":false,"has_custom_perms":false,"hidden":false,"locked":false,"mtime":1240027895,"name":"Tribo Guajajaras","perms":{"r":true,"w":true,"d":true},"revcount":21,"revurl":"Tribo Guajajaras.2009-04-18-04-11-35","_args":{"page":"Tribo Guajajaras","revision":false,"ws":"bbnwH1S4mnOsUJqAVnvH","op":"GetPage"}}};
 </script>
 <link rel="alternate" title="kuarup2009 Recent Changes" href="/rss.xml" type="application/rss+xml" />
 <link rel="alternate" title="kuarup2009 / Tribo Guajajaras" href="/rss.xml?page=Tribo+Guajajaras" type="application/rss+xml" />
@@ -38,7 +37,7 @@ PBinfo = {"CurrentPage":{"sessCookie":"ws","page":"Tribo Guajajaras","editorVers
 <td id="page-col-2">
 <div id="wikicontent">
 <h1 class="pagetitle box"><a id="pb-page-star"><!--[if lte IE 7]>&nbsp;<![endif]--></a>Tribo Guajajaras</h1>
-<div class="page-history"><a href="/FindPage?RevisionsFor=Tribo%20Guajajaras" class="iconbutton historyicon">Page history</a>  last edited by <a href="http://kuarup2009.pbwiki.com/user/8e97098a0aa6e38e2a068474c4f3d8a1187b0d01" class="iconbutton usericon">Andre Sion</a> 1 wk ago
+<div class="page-history"><a href="/FindPage?RevisionsFor=Tribo%20Guajajaras" class="iconbutton historyicon">Page history</a>  last edited by <a href="http://kuarup2009.pbwiki.com/user/8e97098a0aa6e38e2a068474c4f3d8a1187b0d01" class="iconbutton usericon">Andre Sion</a> 3 mins ago
 </div>
 <div id="lockinfo">
 </div>
@@ -68,7 +67,7 @@ PBinfo = {"CurrentPage":{"sessCookie":"ws","page":"Tribo Guajajaras","editorVers
 <p>Para os moradores destas aldeias os açudes permitem tanto a pesca de subsistência quanto a comercial.</p>
 <p>(fonte: <a href="http://pib.socioambiental.org">http://pib.socioambiental.org</a>)</p>
 <p>&nbsp;</p>
-<p><img src="/f/TriboGuajajara.jpg"></p>
+<p><img src="/f/1236646103/TriboGuajajara.jpg"></p>
 <p>(fonte: <a href="http://pib.socioambiental.org">http://pib.socioambiental.org</a>)</p>
 <p>&nbsp;</p>
 <h2>Descrição do trabalho</h2>
@@ -77,7 +76,8 @@ PBinfo = {"CurrentPage":{"sessCookie":"ws","page":"Tribo Guajajaras","editorVers
 <li>Fase 1 - <a href="/Personagens-Peixes-Guajajaras">Peixe</a></li>
 <li>Fase 2 - <a href="/Coadjuvantes-Guajajaras">Coadjuvante</a></li>
 <li>Fase 3 - <a href="/MovimentoGuajajaras">Movimento</a></li>
-<li>Fase 4 - Primeiro Problema</li>
+<li>Fase 4 - <a href="/Primeiro+Problema+-+Guajajaras">Primeiro Problema</a></li>
+<li>Fase 5 - <a href="/Guajajaras+-+Os+Colaboradores">Os Coadjuvantes</a></li>
 </ul>
 </div>
 </div>
@@ -138,7 +138,6 @@ PBinfo = {"CurrentPage":{"sessCookie":"ws","page":"Tribo Guajajaras","editorVers
 <div style="display:none" id="thingbar-pages">
 <div style="border-bottom:1px dotted #bbb; font-size: 10px; padding-bottom: 0.5em; margin-bottom: 0.5em;"><a href="javascript:void(0);" onmousedown="insert_newlink_into_editor(); return false">Insert a link to a new page</a></div>
 <ol id="thingbarpages"><li><div align="center"><span id="thingbarLoadIcon"></span> Loading...</div></li></ol>
-</ol>
 </div>
 <div style="display:none;" id="thingbar-images">
 <div style="border-bottom:1px dotted #bbb; font-size: 10px; padding-bottom: 0.5em; margin-bottom: 0.5em;"></div>
@@ -155,14 +154,7 @@ PBinfo = {"CurrentPage":{"sessCookie":"ws","page":"Tribo Guajajaras","editorVers
 </td>
 </tr>
 </table> 
-</div>
-<script>
-new MiniTabSwitcher({
-'linkselectab-pages'  : 'thingbar-pages',
-'linkselectab-images' : 'thingbar-images'
-});
-</script>
-</div>
+</div>	</div>
 <div id="comments" class="box nocomments">
 <div class="comments-header">
 <div class="corner4px top"><div class="right"></div><div class="left"></div></div>
@@ -206,9 +198,9 @@ div#sendalink_to_container div#header, div#sendalink_to_container ul, div#sendal
 </div>
 <div id="footer-about">
 <p>
-<strong>About this wiki</strong><br/>
-<a href="/contact.php">Contact the owner</a> / <a href="/rss.xml">RSS 
-feed</a> /  This wiki is <strong>public</strong>
+<strong>About this wiki</strong>
+<br/>
+<a href="/contact.php">Contact the owner</a> /     <a href="/rss.xml">RSS feed</a> /     This wiki is <strong>public</strong>
 </p>
 </div>
 </div>        <div class="footer">
@@ -251,25 +243,8 @@ feed</a> /  This wiki is <strong>public</strong>
 <ul>
 <li id="sendalink"><a href="" class="iconbutton sendlink">Send a link</a></li>
 <li id="folderselector"><a href="folder.html" class="iconbutton folder">Put this page in a different folder</a>
-<select class="smalltext" style="max-width:250px">
-<option selected="selected" value="">(no folder)</option>            <option>Create a new folder&hellip;</option>            <option label="Caeté" value="Caeté">Caeté</option>
-<option label="Guajajaras" value="Guajajaras" selected="selected">Guajajaras</option>
-<option label="Guarani" value="Guarani">Guarani</option>
-<option label="juruna" value="juruna">juruna</option>
-<option label="karajá" value="karajá">karajá</option>
-<option label="Piraporangatu" value="Piraporangatu">Piraporangatu</option>
-<option label="Potiguara" value="Potiguara">Potiguara</option>
-<option label="Tabajara" value="Tabajara">Tabajara</option>
-<option label="Temiminós" value="Temiminós">Temiminós</option>
-<option label="Ticuna" value="Ticuna">Ticuna</option>
-<option label="Tupinambá" value="Tupinambá">Tupinambá</option>
-<option label="Tupiniquim" value="Tupiniquim">Tupiniquim</option>
-<option label="Txucarramae" value="Txucarramae">Txucarramae</option>
-<option label="WaiWai" value="WaiWai">WaiWai</option>
-<option label="Xavante" value="Xavante">Xavante</option>
-<option label="Xerente" value="Xerente">Xerente</option>
-<option label="Yanomami" value="Yanomami">Yanomami</option>
-</select>
+<select class="smalltext" style="max-width:250px; display: none;">
+<option selected="selected" value="">(no folder)</option>            <option>Create a new folder&hellip;</option>          </select>
 </li>
 <li id="ajaxtags">
 <a class="iconbutton addtag" id="edittags" href="#view=edit">Add Tags</a>
@@ -281,13 +256,24 @@ feed</a> /  This wiki is <strong>public</strong>
 </ul>
 </div><!-- /#page-side-toolbar -->
 </span>
-<div id="sidebarContent" style="display: none;">
-<div class="content wikistyle"><p>This is your Sidebar, which you can edit like any other wiki page.</p>
+<div class="wikicontext-module sidebox folders" id="module-folders">
+<div class="header"><h3>Navigator</h3><a href="javascript:void(0);" class="close togglemodule">&nbsp;</a></div>  <div class="content wikistyle" style="height: 200px;">
+<div class="loading">Loading&hellip;</div>
+</div>
+<div class="footer resizeable">&nbsp;</div>
+</div>                <div class="wikicontext-module sidebox sidebar" id="module-sidebar">
+<div class="header"><h3>SideBar</h3><a href="javascript:void(0);" class="close togglemodule">&nbsp;</a></div>    <div class="content wikistyle">
+<p>This is your Sidebar, which you can edit like any other wiki page.</p>
 <p>&nbsp;</p>
 <p>This Sidebar appears everywhere on your wiki. Add to it whatever you like -- a navigation section, a link to your favorite web sites, or anything else.&nbsp;</p>
+<div class="content" style="border-top:1px solid #eee;padding:4px 0px; margin: 0px 8px;"><a href="/SideBar#view=edit">Edit the sidebar</a></div>    </div>
+<div class="footer">&nbsp;</div>
+</div>                            <div class="wikicontext-module sidebox recentactivity" id="module-recentactivity">
+<div class="header"><h3>Recent Activity</h3><a href="javascript:void(0);" class="close togglemodule">&nbsp;</a></div>  <div class="content" style="height: 364px;">
+<div class="loading">Loading&hellip;</div>
 </div>
-<div class="content" style="border-top:1px solid #eee;padding:4px 0px; margin: 0px 8px;"><a href="/SideBar#view=edit">Edit the sidebar</a></div>        </div>
-</div>
+<div class="footer resizeable">&nbsp;</div>
+</div>            </div>
 </div>  </td>
 </tr>
 </table>
@@ -299,4 +285,4 @@ feed</a> /  This wiki is <strong>public</strong>
 <noscript>
 <img src="http://pixel.quantserve.com/pixel/p-16CGFkiSpdTEU.gif" style="display: none" height="1" width="1" alt="Quantcast"/></noscript>
 <!-- End Quantcast tag -->
-<!-- v=2,utz=x,ssl=0,ua=Win-Firefox-3,uid=8e97098a0aa6e38e2a068474c4f3d8a1187b0d01,sn=23.5054736332512859515.0,pid=5381,hn=sf23,pv=pub,pkg=p20,perm=mod,crea=1236242503,mt=1238851829,sc=778,cl=1,cat=edu,ng=1,i_=0.0005,l_=0.0605,ch=24,cm=7,cp=4,mdh=147,mds=4,mdm=1,uq=4,uQ=1,psR=57,ASg=57,vC=0.001,vi=0.036,vt=0.044,Is=0.004,If=0.003,Iv=0.004,Ip=0.026,To=13246,te=0.180 -->
+<!-- v=2,utz=x,ssl=0,ua=Win-Firefox-3,uid=8e97098a0aa6e38e2a068474c4f3d8a1187b0d01,sn=26.0.0,pid=29810,hn=sf51,pv=pub,pkg=p20,perm=mod,crea=1236242503,mt=1240027895,sc=946,cl=1,cat=edu,ng=1,i_=0.0005,l_=0.0920,mdh=46,mds=4,ch=22,cm=6,cp=1,uq=4,psR=6,ASg=6,vC=0.002,vi=0.017,vt=0.027,To=11503,te=0.149 -->
