Trabalho 3 - Números Complexos.

--- a/poo09/projetos/trunk/foxtrot/src/main/java/foxtrot/package.html
+++ b/poo09/projetos/trunk/foxtrot/src/main/java/foxtrot/package.html
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-Projeto do Curso de Mestrado 2008 - Calculadora Orientada a Objetos - grupo foxtrot.
+Projeto do Curso de Mestrado 2008 - Calculadora Orientada a Objetos - grupo echo.
 
 <h1>Calculadora Orientada a Objetos</h1>
 
@@ -31,7 +31,7 @@ Projeto do Curso de Mestrado 2008 - Calculadora Orientada a Objetos - grupo foxt
  Programa principal e classes iniciais para a calculadora orientada a objetos.
  
 <ul>
-  <li><a href="http://labase.nce.ufrj.br/cursos/poo/projects/foxtrot">Calculadora foxtrot</a>
+  <li><a href="http://labase.nce.ufrj.br/cursos/poo/projects/echo">Calculadora echo</a>
 </ul>
 
 <h2>Related Documentation</h2>
