--- a/poo09/projetos/trunk/hotel/src/main/java/hotel/package.html
+++ b/poo09/projetos/trunk/hotel/src/main/java/hotel/package.html
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-Projeto do Curso de Mestrado 2008 - Calculadora Orientada a Objetos - grupo hotel.
+Projeto do Curso de Mestrado 2008 - Calculadora Orientada a Objetos - grupo foxtrot.
 
 <h1>Calculadora Orientada a Objetos</h1>
 
@@ -31,7 +31,7 @@ Projeto do Curso de Mestrado 2008 - Calculadora Orientada a Objetos - grupo hote
  Programa principal e classes iniciais para a calculadora orientada a objetos.
  
 <ul>
-  <li><a href="http://labase.nce.ufrj.br/cursos/poo/projects/hotel">Calculadora hotel</a>
+  <li><a href="http://labase.nce.ufrj.br/cursos/poo/projects/foxtrot">Calculadora foxtrot</a>
 </ul>
 
 <h2>Related Documentation</h2>
