--- a/poo09/kuarup/tribos/guajajaras/Guajajaras-Detrito.htm
+++ b/poo09/kuarup/tribos/guajajaras/Guajajaras-Detrito.htm
@@ -11,12 +11,12 @@
 <![endif]-->
 <!--[if lte IE 6]><link rel="stylesheet" type="text/css" href="/layout/common/css/ie6.css" /><![endif]-->
 <script>
-PBinfo = {"CurrentPage":{"isDev":false,"sessCookie":"ws","requesttime":1241277172,"folder":"Guajajaras","saved":false,"starred":false,"page":"Tribo Guajajaras","editorVersion":"1238535940"},"CurrentWiki":{"isPublic":true,"debug":null,"usercount":"21","filecount":0,"pagecount":133,"name":"kuarup2009","starredcount":0,"granular_notifications":false},"CheckPermissions":{"uid":"8e97098a0aa6e38e2a068474c4f3d8a1187b0d01","wikiperm":"mod"},"GetFeatures":{"ajaxedit":true,"ajaxlink":true,"ajaxsave":true,"autocomplete_v2":true,"stars":true,"pbspell":true},"GetUserPrefs":{"sidebar":{"folders":[],"sidebar":[],"addusers":[],"recentactivity":[]},"sidebar_collapsed":false,"starred":[]},"GetTimes":{"_auth_role":"mod","_auth_via":"cookie","_not_checking_inputs":true,"_valid_as_of":1241277172,"commenttime":0,"filetime":1241209872,"foldertime":1241120903,"page_list_time":1241261061,"pagetime":1241277064,"permtime":1236763378,"tagtime":1236248066,"_args":{"ws":"UZWesu0vivXKVaNyMSLN","op":"GetTimes"}},"GetPage":{"_perm_cache_times":{"pagetime":1241277064,"foldertime":1241120903,"permtime":1236763378},"_valid_as_of":1241277172,"author":{"uid":"8e97098a0aa6e38e2a068474c4f3d8a1187b0d01","name":"Andre Sion","email":"andre.sion@gmail.com"},"folder":"Guajajaras","hasPlugins":false,"has_custom_perms":false,"hidden":false,"locked":false,"mtime":1241271728,"name":"Tribo Guajajaras","perms":{"r":true,"w":true,"d":true},"revcount":29,"revurl":"Tribo Guajajaras.2009-05-02-13-42-08","_args":{"page":"Tribo Guajajaras","revision":false,"ws":"UZWesu0vivXKVaNyMSLN","op":"GetPage"}}};
+PBinfo = {"CurrentPage":{"isDev":false,"sessCookie":"ws","requesttime":1241277263,"folder":"Guajajaras","saved":false,"starred":false,"page":"Guajajaras Detrito","editorVersion":"1238535940"},"CurrentWiki":{"isPublic":true,"debug":null,"usercount":"21","filecount":0,"pagecount":133,"name":"kuarup2009","starredcount":0,"granular_notifications":false},"CheckPermissions":{"uid":"8e97098a0aa6e38e2a068474c4f3d8a1187b0d01","wikiperm":"mod"},"GetFeatures":{"ajaxedit":true,"ajaxlink":true,"ajaxsave":true,"autocomplete_v2":true,"stars":true,"pbspell":true},"GetUserPrefs":{"sidebar":{"folders":[],"sidebar":[],"addusers":[],"recentactivity":[]},"sidebar_collapsed":false,"starred":[]},"GetTimes":{"_auth_role":"mod","_auth_via":"cookie","_not_checking_inputs":true,"_valid_as_of":1241277263,"commenttime":0,"filetime":1241209872,"foldertime":1241120903,"page_list_time":1241261061,"pagetime":1241277064,"permtime":1236763378,"tagtime":1236248066,"_args":{"ws":"UZWesu0vivXKVaNyMSLN","op":"GetTimes"}},"GetPage":{"_perm_cache_times":{"pagetime":1241277064,"foldertime":1241120903,"permtime":1236763378},"_valid_as_of":1241277263,"author":{"uid":"8e97098a0aa6e38e2a068474c4f3d8a1187b0d01","name":"Andre Sion","email":"andre.sion@gmail.com"},"folder":"Guajajaras","hasPlugins":false,"has_custom_perms":false,"hidden":false,"locked":false,"mtime":1241120805,"name":"Guajajaras Detrito","perms":{"r":true,"w":true,"d":true},"revcount":1,"revurl":"Guajajaras Detrito.2009-04-30-19-46-45","_args":{"page":"Guajajaras Detrito","revision":false,"ws":"UZWesu0vivXKVaNyMSLN","op":"GetPage"}}};
 </script>
 <link rel="alternate" title="kuarup2009 Recent Changes" href="/rss.xml" type="application/rss+xml" />
-<link rel="alternate" title="kuarup2009 / Tribo Guajajaras" href="/rss.xml?page=Tribo+Guajajaras" type="application/rss+xml" />
-<link rel="alternate" type="application/x-wiki" title="Edit" href="/Tribo%20Guajajaras#view=edit" />
-<title>kuarup2009 / Tribo Guajajaras</title>
+<link rel="alternate" title="kuarup2009 / Guajajaras Detrito" href="/rss.xml?page=Guajajaras+Detrito" type="application/rss+xml" />
+<link rel="alternate" type="application/x-wiki" title="Edit" href="/Guajajaras%20Detrito#view=edit" />
+<title>kuarup2009 / Guajajaras Detrito</title>
 </head>
 <body class="">
 <div id="wrapper">
@@ -27,8 +27,8 @@ PBinfo = {"CurrentPage":{"isDev":false,"sessCookie":"ws","requesttime":124127717
 <div id="page">
 <div id="page-toolbar">
 <div id="page-toolbar-inner">
-<div id="view-tab" class="active"><a href="/Tribo-Guajajaras">View</a></div>
-<div id="edit-tab" class=""><a href="/Tribo%20Guajajaras?edit=true" >Edit</a></div>					<div id="expand-collapse-page"><a id="expand-collapse-page-link" href="javascript:void(0);"></a></div>
+<div id="view-tab" class="active"><a href="/Guajajaras-Detrito">View</a></div>
+<div id="edit-tab" class=""><a href="/Guajajaras%20Detrito?edit=true" >Edit</a></div>					<div id="expand-collapse-page"><a id="expand-collapse-page-link" href="javascript:void(0);"></a></div>
 </div>
 </div>
 <table cellspacing="0" id="inner-page">
@@ -36,72 +36,77 @@ PBinfo = {"CurrentPage":{"isDev":false,"sessCookie":"ws","requesttime":124127717
 <td id="page-col-1" width="4">&nbsp;</td>
 <td id="page-col-2">
 <div id="wikicontent">
-<h1 class="pagetitle box"><a id="pb-page-star"><!--[if lte IE 7]>&nbsp;<![endif]--></a>Tribo Guajajaras</h1>
-<div class="page-history"><a href="/FindPage?RevisionsFor=Tribo%20Guajajaras" class="iconbutton historyicon">Page history</a>  last edited by <a href="http://kuarup2009.pbworks.com/user/8e97098a0aa6e38e2a068474c4f3d8a1187b0d01" class="iconbutton usericon">Andre Sion</a> <span id="page-history-ago">1 hr ago</span>
+<h1 class="pagetitle box"><a id="pb-page-star"><!--[if lte IE 7]>&nbsp;<![endif]--></a>Guajajaras Detrito</h1>
+<div class="page-history"><a href="/FindPage?RevisionsFor=Guajajaras%20Detrito" class="iconbutton historyicon">Page history</a>  last edited by <a href="http://kuarup2009.pbworks.com/user/8e97098a0aa6e38e2a068474c4f3d8a1187b0d01" class="iconbutton usericon">Andre Sion</a> <span id="page-history-ago">1 day ago</span>
 </div>
 <div id="lockinfo">
 </div>
 <div id="wikipage" class="box wikistyle">
 <div style="" id="wikipage-inner">
-<div class="box wikistyle">
-<div style="">
-<h2>Descrição da Tribo</h2>
 <p>&nbsp;</p>
-<p>Os <b>guajajaras</b> (também conhecidos como <i>teneteara</i> ou <i>tenetehára</i>) são um dos povos indígenas mais numerosos do Brasil.</p>
-<p>Habitam onze terras indígenas na margem oriental da <a class="mw-redirect" title="Amazonia" href="http://pt.wikipedia.org/wiki/Amazonia">Amazonia</a>, todas situadas no <a title="Maranhão" href="http://pt.wikipedia.org/wiki/Maranh%C3%A3o">Maranhão</a>.&nbsp;</p>
-<p>A língua falada por eles é o <a title="Língua teneteara" href="http://pt.wikipedia.org/wiki/L%C3%ADngua_teneteara">teneteara</a>, da família <a class="mw-redirect" title="Tupi-guarani" href="http://pt.wikipedia.org/wiki/Tupi-guarani">tupi-guarani</a>. Sua história de mais de 380 anos de contato foi marcada tanto</p>
-<p>por aproximações com os brancos como por recusas totais, submissões, revoltas e grandes tragédias. A revolta de <a title="1901" href="http://pt.wikipedia.org/wiki/1901">1901</a></p>
-<p>contra os missionários <a title="Capuchinho" href="http://pt.wikipedia.org/wiki/Capuchinho">capuchinhos</a> teve como resposta a última "guerra contra os índios" na história do Brasil.</p>
-<p>Foram também conhecidos por muitos povos brasileiros como os "cuia de aço" por fazerem ferramentas excelentes para o trabalho.</p>
-<p>Se alimentam principalmente de caça e de frutas cultivadas por eles. (fonte: <a href="http://pt.wikipedia.org/wiki/Guajajaras">Wikipédia</a>)</p>
 <p>&nbsp;</p>
-<p>A língua guajajara pertence à família tupi-guarani, sendo as línguas mais próximas o Asurini (do Tocantins), o Avá (Canoeiro),</p>
-<p>o Parakanã, o Suruí (do Pará), o Tapirapé e o Tembé, que lhe é muito semelhante. Os guajajara chamam sua língua de ze'egete ("a fala boa").</p>
-<p>Ela é subdividida pelos lingüistas em quatro dialetos que são mutuamente inteligíveis, sem maiores complicações.</p>
-<p>Nas aldeias, o guajajara é falado como primeira língua, enquanto o português tem a função de língua franca, que é entendida pela maioria.</p>
-<p>A situação sociolingüística dos guajajara que moram nas cidades é desconhecida.</p>
 <p>&nbsp;</p>
-<p>A pesca é uma das atividades mais praticadas pelas aldeias ribeirinhas. Os guajajara costumam pescar cerca de 36 espécies diferentes,</p>
-<p>sendo o cará, o cascudo, a lampreia, o mandi, o pacu, o piau e a traíra as mais comuns. Nos últimos anos, no entanto, foram construídos, em</p>
-<p>diversos projetos comunitários, pequenos açudes perto de algumas aldeias que ficam distantes de rios.</p>
-<p>Para os moradores destas aldeias os açudes permitem tanto a pesca de subsistência quanto a comercial.</p>
-<p>(fonte: <a href="http://pib.socioambiental.org">http://pib.socioambiental.org</a>)</p>
+<p><img src="/f/1241120889/Detrito%20Guajajaras.jpg"></p>
 <p>&nbsp;</p>
-<p><img src="/f/1236646103/TriboGuajajara.jpg"></p>
-<p>(fonte: <a href="http://pib.socioambiental.org">http://pib.socioambiental.org</a>)</p>
+<hr>
+<p>Código fonte:</p>
 <p>&nbsp;</p>
-<h2>Descrição do trabalho</h2>
+<p>"""</p>
+<p>#######################</p>
+<p>&nbsp;Guajajaras - Detrito</p>
+<p>#######################</p>
+<p>:Author: Tribo Guajajaras</p>
+<p>:Contact: Tribo Guajajaras(Mestrado - NCE/UFRJ)</p>
+<p>:Date: $Date: 2009/05/04$</p>
+<p>:Status: This is a "work in progress"</p>
+<p>:Revision: $Revision: 1.0$</p>
+<p>:Home: `LABASE &lt;<a href="http://labase.nce.ufrj.br/">http://labase.nce.ufrj.br/</a>&gt;`__</p>
+<p>:Copyright: ©2009, `GPL &lt;<a href="http://is.gd/3Udt">http://is.gd/3Udt</a>&gt;`__</p>
+<p>"""</p>
+<p>from visual import *</p>
+<p>TITLE = 'Detrito'</p>
+<p>class Cenario:</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; def principal(self):</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ancora = Ancora(escala =1, pos = (0,0,0), axis=(1,0,0))</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ancora.esqueleto.rotate(angle=pi/2, axis=(1,0,0))</p>
+<p>class SerMarinho():</p>
+<p>&nbsp;&nbsp;&nbsp; def __init__(self, escala= 1, **qualquel_outro_parametro):</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "Construtor do ser marinho, definindo um esqueleto(frame) e desenhando"</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; self.esqueleto=frame(**qualquel_outro_parametro)</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; self.desenha(escala)</p>
+<p>&nbsp;&nbsp;&nbsp; def desenha(self): pass</p>
+<p>&nbsp;&nbsp;&nbsp;</p>
+<p>class Ancora(SerMarinho):</p>
+<p># Ancora</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; def desenha(self, escala=1):</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; esc=escala&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; tuboCorpo = cylinder(frame = self.esqueleto,pos=(0,12*esc,0), axis=(30*esc,0,0), radius=1*esc, color = (0.4,0.4,0.4), opacity = 1)</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; tuboPonta1 = cylinder(frame = self.esqueleto,pos=(30*esc,2*esc,0), axis=(0,20,0), radius=1*esc, color = (0.4,0.4,0.4), opacity = 1)</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; tuboPonta2 = cylinder(frame = self.esqueleto,pos=(30*esc,12*esc,-10*esc), axis=(0,0,20), radius=1*esc, color = (0.4,0.4,0.4), opacity = 1)</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; tuboSuperior = cylinder(frame = self.esqueleto,pos=(10*esc,7*esc,0), axis=(0,10,0), radius=1*esc, color = (0.4,0.4,0.4), opacity = 1)</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pontaSup1 = pyramid(frame = self.esqueleto,pos=(30*esc,20*esc,0), size = (6*esc,6*esc,4*esc), axis=(-1,1,0), color = (0.4,0.4,0.4), opacity = 1)</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pontaInf1 = pyramid(frame = self.esqueleto,pos=(30*esc,3*esc,0), size = (6*esc,6*esc,4*esc), axis=(-1,-1,0), color = (0.4,0.4,0.4), opacity = 1)</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pontaEsq2 = pyramid(frame = self.esqueleto,pos=(30*esc,12*esc,-10*esc), size = (6*esc,6*esc,4*esc), axis=(-1,0,-1), color = (0.4,0.4,0.4), opacity = 1)</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pontaDir2 = pyramid(frame = self.esqueleto,pos=(30*esc,12*esc,10*esc), size = (6*esc,6*esc,4*esc), axis=(-1,0,1), color = (0.4,0.4,0.4), opacity = 1)</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; base = ring(pos=(-3*esc,0,12*esc), axis=(0,1,0), radius=3*esc, thickness=1*esc, color = (0.4, 0.4, 0.4))</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; def proximoFrame(self):</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pass</p>
+<p>if __name__ == "__main__":</p>
+<p>&nbsp;&nbsp;&nbsp; cenario = Cenario()</p>
+<p>&nbsp;&nbsp;&nbsp; cenario.principal()</p>
 <p>&nbsp;</p>
-<ul>
-<li>Fase 1 - <a href="/Personagens-Peixes-Guajajaras">Peixe</a></li>
-<li>Fase 2 - <a href="/Coadjuvantes-Guajajaras">Coadjuvante</a></li>
-<li>Fase 3 - <a href="/MovimentoGuajajaras">Movimento</a></li>
-<li>Fase 4 - <a href="/Primeiro+Problema+-+Guajajaras">Primeiro Problema</a></li>
-<li>Fase 5 - <a href="/Guajajaras+-+Os+Colaboradores">Os Coadjuvantes</a></li>
-<li>Fase 6 - Os Testes
-<ul>
-<li><a href="/Atencao-Guajajaras">Atenção</a></li>
-<li><a href="/Letramento-Guajajaras">Letramento</a></li>
-<li><a href="/Logica-Guajajaras">Lógica</a></li>
-<li><a href="/Memoria-Guajajaras">Memória</a></li>
-</ul>
-</li>
-<li>Fase 7 - <a href="/Guajajaras-Detrito">Os Detritos</a></li>
-</ul>
-</div>
-</div>
 <p>&nbsp;</p>
 </div>
 </div>
 </div>
 <div id="wikiedit" style="display:none;">
 <div id="editor-panel" class="box">
-<h1 id="editTitle" class="pagetitle ellipses">Tribo Guajajaras<a title="Rename this page" class="iconbutton renameicon" href="/rename.php?renamepage=Tribo%20Guajajaras"></a></h1>
+<h1 id="editTitle" class="pagetitle ellipses">Guajajaras Detrito<a title="Rename this page" class="iconbutton renameicon" href="/rename.php?renamepage=Guajajaras%20Detrito"></a></h1>
 <table style="table-layout:fixed; width:100%" id="edit-panel">
 <col/>
 <col style="width:240px"/>
 <tr><td>
-<form method="post" action="/Tribo%20Guajajaras" id="editwikipage">
+<form method="post" action="/Guajajaras%20Detrito" id="editwikipage">
 <input type="hidden" name="process" value="edit_page" />
 <div id="editframe"></div>
 <div style="background:#f7f7f7; border: 1px solid #ddd; border-top: 1px solid #f7f7f7;" id="edit-toolbar-outer">
@@ -109,7 +114,7 @@ PBinfo = {"CurrentPage":{"isDev":false,"sessCookie":"ws","requesttime":124127717
 <span id="show_tags" style="float:right; margin: 5px;"><a id="edit_tags" href="">Edit tags</a></span>
 <span id="autosave_msg" class="aux"></span>
 <a href="#pbedit" onclick="Page.EditPage.cancel=true;$('editwikipage').submit();" class="button"><span class="iconbutton savepage" id="saveButton"><b>Save</b></span></a>
-<span style="line-height:30px;">or <a href="/Tribo-Guajajaras?unlock=true" id="cancelButton" onclick="Page.EditPage.cancel=true;">Cancel</a></span>
+<span style="line-height:30px;">or <a href="/Guajajaras-Detrito?unlock=true" id="cancelButton" onclick="Page.EditPage.cancel=true;">Cancel</a></span>
 <span id="save_msg" class="aux loading"></span>
 </div>
 <div style="clear:both; font-size:1px; line-height:1px;">&nbsp;</div>
@@ -133,7 +138,7 @@ PBinfo = {"CurrentPage":{"isDev":false,"sessCookie":"ws","requesttime":124127717
 <div id="editor-column" style="margin-left:12px;" class="thingbar">
 <div id="edit-tools">
 <h4>Page Tools</h4>
-<a class="iconbutton renameicon" href="/rename.php?renamepage=Tribo%20Guajajaras">Rename this page</a>    <a class="iconbutton deleteicon" href="#" onclick="PBwiki.confirmDeletePage();return false;">Delete this page</a>
+<a class="iconbutton renameicon" href="/rename.php?renamepage=Guajajaras%20Detrito">Rename this page</a>    <a class="iconbutton deleteicon" href="#" onclick="PBwiki.confirmDeletePage();return false;">Delete this page</a>
 <div class="editor-module">
 <div class="header">
 <h3>Insert links</h3>
@@ -171,7 +176,7 @@ PBinfo = {"CurrentPage":{"isDev":false,"sessCookie":"ws","requesttime":124127717
 <a name="comments"></a>
 <div class="corner4px bot"><div class="right"></div><div class="left"></div></div>
 </div>
-<form id="comment-form" action="/discussion.php?page=Tribo%20Guajajaras" method="post">
+<form id="comment-form" action="/discussion.php?page=Guajajaras%20Detrito" method="post">
 <label>Add a comment</label>
 <textarea class="text" rows="4" name="comment" id="comment-form-value" ></textarea><br/>
 <input type="submit" name="" value="Add comment" class="primarybutton"/>
@@ -260,7 +265,7 @@ div#sendalink_to_container div#header, div#sendalink_to_container ul, div#sendal
 <span id="tagList">
 </span>
 <p class="validation-error" style="display:none"></p>
-<p class="tagsmsg iconbutton accepticon" style="display:none">Tribo Guajajaras tags changed</p>
+<p class="tagsmsg iconbutton accepticon" style="display:none">Guajajaras Detrito tags changed</p>
 </li>
 </ul>
 </div><!-- /#page-side-toolbar -->
@@ -294,4 +299,4 @@ div#sendalink_to_container div#header, div#sendalink_to_container ul, div#sendal
 <noscript>
 <img src="http://pixel.quantserve.com/pixel/p-16CGFkiSpdTEU.gif" style="display: none" height="1" width="1" alt="Quantcast"/></noscript>
 <!-- End Quantcast tag -->
-<!-- v=2,utz=x,ssl=0,ua=Win-Firefox-3,uid=8e97098a0aa6e38e2a068474c4f3d8a1187b0d01,sn=239.16920570.0,pid=5080,hn=sf26,pv=pub,pkg=p20,perm=mod,crea=1236242503,mt=1241277064,sc=1074,cl=1,cat=edu,ng=1,i_=0.0006,l_=0.0882,mdh=44,mds=4,ch=22,cm=6,cp=1,uq=4,vC=0.001,vi=0.012,vt=0.015,psR=3,ASg=3,To=13110,te=0.131 -->
+<!-- v=2,utz=x,ssl=0,ua=Win-Firefox-3,uid=8e97098a0aa6e38e2a068474c4f3d8a1187b0d01,sn=243.16923068.0,pid=20470,hn=sf64,pv=pub,pkg=p20,perm=mod,crea=1236242503,mt=1241277064,sc=1074,cl=1,cat=edu,ng=1,i_=0.0005,l_=0.1089,mdh=44,mds=6,ch=22,cm=6,cp=1,uq=4,vC=0.001,vi=0.013,vt=0.016,psR=3,ASg=3,To=13066,te=0.160 -->
