--- a/poo09/projetos/trunk/delta/src/main/java/delta/package.html
+++ b/poo09/projetos/trunk/delta/src/main/java/delta/package.html
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-Projeto do Curso de Mestrado 2005 - Calculadora Orientada a Objetos - grupo charlie.
+Projeto do Curso de Mestrado 2008 - Calculadora Orientada a Objetos - grupo 
 
 <h1>Calculadora Orientada a Objetos</h1>
 
@@ -31,7 +31,7 @@ Projeto do Curso de Mestrado 2005 - Calculadora Orientada a Objetos - grupo char
  Programa principal e classes iniciais para a calculadora orientada a objetos.
  
 <ul>
-  <li><a href="http://labase.nce.ufrj.br/cursos/poo/mm5/multiproject/charlie">Calculadora charlie</a>
+  <li><a href="http://labase.nce.ufrj.br/cursos/poo/projects/golf">Calculadora golf</a>
 </ul>
 
 <h2>Related Documentation</h2>
@@ -42,6 +42,6 @@ For overviews, tutorials, examples, guides, and tool documentation, please see:
 </ul>
 
 <!-- Put @see and @since tags down here. -->
-@since version 0.1 - 2005
+@since version 0.1 - 2008
 </body>
 </html>
